--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -21,7 +21,7 @@
             </ul>
 <header class="navbar-fixed">
     <nav class="blue">
-        <div class="container nav-wrapper">
+        <div class=" nav-wrapper">
             <a sec:authorize="!isAuthenticated()" href="/" class="brand-logo">gigFinder</a>
 
             <a href="/company/my-profile" sec:authorize="hasRole('ROLE_COMPANY')" class="brand-logo">gigFinder</a>
@@ -39,30 +39,7 @@
     </nav>
 </header>
 </div>
-<div th:fragment="navUser">
-    <header class="navbar-fixed">
-        <ul id="dropdown1" class="dropdown-content">
-            <li>
-                <form th:action="@{/logout}" method="post">
-                    <input class="btn-flat" type="submit" value="LOGOUT"/>
-                </form>
-            </li>
 
-        </ul>
-        <nav class="blue">
-            <div class=" container nav-wrapper">
-                <a href="/" class="brand-logo">gigFinder</a>
-
-                <ul class="right hide-on-med-and-down">
-                    <li><a th:href="@{/home/find-gigs}">Find a Gig</a></li>
-                    <li><a th:href="@{/home/find-bands}">Find a Band</a></li>
-                    <!-- Dropdown Trigger -->
-                    <li><a class="dropdown-button" href="#!" data-activates="dropdown1" ><span th:text="'@' + ${user.username}"></span><i class="material-icons right">arrow_drop_down</i></a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-</div>
 <span th:include="includes :: js"></span>
 
 </body>
